--- a/my_portfolio/package.json
+++ b/my_portfolio/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-reveal": "^1.2.2",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2",
     "styled-icons": "^8.3.0"
