--- a/my_portfolio/package.json
+++ b/my_portfolio/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "emailjs-com": "^2.3.2",
     "gsap": "^2.1.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
