--- a/my_portfolio/package.json
+++ b/my_portfolio/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.0.1",
+    "react-smooth-scroller": "^1.2.0",
     "styled-components": "^4.3.2",
     "styled-icons": "^8.3.0"
   },
