--- a/my_portfolio/package.json
+++ b/my_portfolio/package.json
@@ -12,6 +12,7 @@
     "react-reveal": "^1.2.2",
     "react-scripts": "3.0.1",
     "react-smooth-scroller": "^1.2.0",
+    "reaptcha": "^1.7.2",
     "styled-components": "^4.3.2",
     "styled-icons": "^8.3.0"
   },
