--- a/my_portfolio/package.json
+++ b/my_portfolio/package.json
@@ -4,6 +4,7 @@
 	"homepage": "http://test-development.nedim.info/",
 	"private": true,
 	"dependencies": {
+		"axios": "^0.21.1",
 		"emailjs-com": "^2.3.2",
 		"gsap": "^2.1.3",
 		"react": "^16.8.6",
