--- a/my_portfolio/package.json
+++ b/my_portfolio/package.json
@@ -5,10 +5,11 @@
 	"private": true,
 	"dependencies": {
 		"axios": "^0.21.1",
+		"bootstrap": "5.0.2",
 		"emailjs-com": "^2.3.2",
 		"gsap": "^2.1.3",
 		"react": "^16.8.6",
-		"react-bootstrap": "^1.0.0-beta.9",
+		"react-bootstrap": "^2.0.0-beta.4",
 		"react-dom": "^16.8.6",
 		"react-reveal": "^1.2.2",
 		"react-scripts": "3.0.1",
