--- a/my_portfolio/package.json
+++ b/my_portfolio/package.json
@@ -1,42 +1,42 @@
 {
-	"name": "my_portfolio",
-	"version": "0.1.0",
-	"homepage": "http://test-development.nedim.info/",
-	"private": true,
-	"dependencies": {
-		"axios": "^0.21.1",
-		"bootstrap": "5.0.2",
-		"emailjs-com": "^2.3.2",
-		"gsap": "^2.1.3",
-		"react": "^16.8.6",
-		"react-bootstrap": "^2.0.0-beta.4",
-		"react-dom": "^16.8.6",
-		"react-reveal": "^1.2.2",
-		"react-scripts": "3.0.1",
-		"react-smooth-scroller": "^1.2.0",
-		"reaptcha": "^1.7.2",
-		"styled-components": "^4.3.2",
-		"styled-icons": "^8.3.0"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "my_portfolio",
+  "version": "0.1.0",
+  "homepage": "https://.nedim.info/",
+  "private": true,
+  "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "5.0.2",
+    "emailjs-com": "^2.3.2",
+    "gsap": "^2.1.3",
+    "react": "^16.8.6",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-dom": "^16.8.6",
+    "react-reveal": "^1.2.2",
+    "react-scripts": "3.0.1",
+    "react-smooth-scroller": "^1.2.0",
+    "reaptcha": "^1.7.2",
+    "styled-components": "^4.3.2",
+    "styled-icons": "^8.3.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
